# NCHU_AI

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Development process.md  Dockerfile  NCHU_XGC.html  PRODUCT.md  PROJECT_STATE.md  README.md  ant-design-x-skill-2.7.0.tgz  docker-compose.yml  nginx.conf  requirements.txt  skills-lock.json
.omx/: metrics.json  notepad.md  project-memory.json
.playwright-cli/: page-2026-05-22T20-47-58-515Z.yml  page-2026-05-23T00-11-13-150Z.yml  page-2026-05-23T00-11-46-729Z.yml  page-2026-05-23T14-32-28-019Z.yml  (+104 more)
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.phase1.yml  docker-compose.rag.yml  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  counselor.py  deps.py  health.py  rag.py  router.py  student.py
backend/app/core/: __init__.py  auth.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/repositories/: chat_repo.py  user_repo.py
backend/app/models/: __init__.py  chat.py  common.py  rag.py  user.py
backend/app/rag/: __init__.py  chunker.py  prompt_builder.py  retriever.py
backend/app/schemas/: business.py
backend/app/services/: __init__.py  business.py  chat_model.py  embedding_service.py  llm_service.py  rag_service.py  sandbox.py  session_service.py
backend/scripts/: ingest_documents.py  init-db.sql  smoke_phase1.py
backend/tests/: conftest.py  test_business_phase1.py  test_health.py
(+284 files in other folders)
